<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  -->
<resources>
    <!--
      The similar strings app_name is added in the Application/template directory, but depending
      on the template directory makes it hard for the sample buildable with Android.mk.
      Thus defining the application_name with different name from the template.
    -->
    <string name="application_name">Fingerprint Android</string>
    <string name="action_settings">Cài Đặt</string>
    <string name="cancel">Thoát</string>
    <string name="use_password">Dùng Mật khẩu</string>
    <string name="sign_in">Xác thực</string>
    <string name="ok">OK</string>
    <string name="password">Mật Khẩu</string>
    <string name="fingerprint_description">Nhập vân tay để tiếp tục</string>
    <string name="fingerprint_hint">Cảm biến vân tay</string>
    <string name="password_description">Nhập mật khẩu để tiếp tục</string>
    <string name="purchase">Click Here</string>
    <string name="purchase_not_invalidated">Purchase not invalidated</string>
    <string name="purchase_button_not_invalidated_description">
        You can proceed to purchase with this button \n even if a new fingerprint is enrolled
    </string>
    <string name="fingerprint_not_recognized">Không nhận ra dấu vân tay. Thử lại</string>
    <string name="fingerprint_success">Nhận diện thành công</string>
    <string name="item_title">Nhận Dạng Dấu Vân Tay</string>
    <string name="item_description">Sử dụng dấu vân tay để xác thực. Bấm vào nút "Click Here"</string>
    <string name="purchase_done">Xác thực thành công</string>
    <string name="new_fingerprint_enrolled_description">Một vân tay mới đã được thêm vào thiết bị này, vì vậy mật khẩu của bạn là bắt buộc.</string>
    <string name="use_fingerprint_in_future">Sử dụng vân tay trong tương lai</string>
    <string name="use_fingerprint_to_authenticate_title">Xác thực bằng dấu vân tay</string>
    <string name="use_fingerprint_to_authenticate_key" >use_fingerprint_to_authenticate_key</string>
    <string name="description_bugdroid_icon">Android bugdroid image</string>
    <string name="description_fingerprint_icon">Fingerprint icon</string>
</resources>
